chore: refine configuration template
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/quickadapter/user_data/config-template.json
+++ b/quickadapter/user_data/config-template.json
@@ -45,11 +45,11 @@
     "privateKey": "",
     "ccxt_config": {
       "enableRateLimit": true,
-      "rateLimit": 60
+      // "rateLimit": 60
     },
     "ccxt_async_config": {
       "enableRateLimit": true,
-      "rateLimit": 60
+      // "rateLimit": 60
     },
     // Spot top 5
     "pair_whitelist": [
