chore: refine configuration templates
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/quickadapter/user_data/config-template.json
+++ b/quickadapter/user_data/config-template.json
@@ -44,11 +44,11 @@
     "walletAddress": "",
     "privateKey": "",
     "ccxt_config": {
-      "enableRateLimit": true
+      "enableRateLimit": true,
       // "rateLimit": 60
     },
     "ccxt_async_config": {
-      "enableRateLimit": true
+      "enableRateLimit": true,
       // "rateLimit": 60
     },
     // Spot top 5
