--- a/ReforceXY/user_data/config-template.json
+++ b/ReforceXY/user_data/config-template.json
@@ -45,11 +45,11 @@
     "walletAddress": "",
     "privateKey": "",
     "ccxt_config": {
-      "enableRateLimit": true
+      "enableRateLimit": true,
       // "rateLimit": 60
     },
     "ccxt_async_config": {
-      "enableRateLimit": true
+      "enableRateLimit": true,
       // "rateLimit": 60
     },
     // Spot top 5
