--- a/ReforceXY/user_data/config-template.json
+++ b/ReforceXY/user_data/config-template.json
@@ -14,6 +14,7 @@
   "cancel_open_orders_on_exit": false,
   // "trading_mode": "futures",
   // "margin_mode": "isolated",
+  // "leverage": 2.0,
   "trading_mode": "spot",
   "stoploss": -0.99,
   "unfilledtimeout": {
