docs: fix markdown syntax
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/quickadapter/user_data/config-template.json
+++ b/quickadapter/user_data/config-template.json
@@ -53,13 +53,7 @@
       // "rateLimit": 60
     },
     // Spot top 5
-    "pair_whitelist": [
-      "BTC/USDT",
-      "ETH/USDT",
-      "SOL/USDT",
-      "BNB/USDT",
-      "XRP/USDT"
-    ],
+    "pair_whitelist": ["BTC/USDT", "ETH/USDT", "SOL/USDT", "BNB/USDT", "XRP/USDT"],
     // // Spot IA
     // "pair_whitelist": [
     //     "NEAR/USDT",
@@ -145,10 +139,7 @@
       "train_rmse": -1
     },
     "feature_parameters": {
-      "include_corr_pairlist": [
-        "BTC/USDT",
-        "ETH/USDT"
-      ],
+      "include_corr_pairlist": ["BTC/USDT", "ETH/USDT"],
       "include_timeframes": [
         "5m",
         "15m",
@@ -158,21 +149,14 @@
       ],
       "label_period_candles": 18,
       "label_metric": "euclidean",
-      "label_weights": [
-        0.5,
-        0.5
-      ],
+      "label_weights": [0.5, 0.5],
       "include_shifted_candles": 6,
       "DI_threshold": 10,
       "weight_factor": 0.9,
       "principal_component_analysis": false,
       "use_SVM_to_remove_outliers": false,
       "use_DBSCAN_to_remove_outliers": false,
-      "indicator_periods_candles": [
-        8,
-        16,
-        32
-      ],
+      "indicator_periods_candles": [8, 16, 32],
       "inlier_metric_window": 0,
       "noise_standard_deviation": 0.02,
       "reverse_test_train_order": false,
