refactor(reforcexy): cleanup
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/ReforceXY/reward_space_analysis/pyproject.toml
+++ b/ReforceXY/reward_space_analysis/pyproject.toml
@@ -42,6 +42,7 @@ python_functions = [
 ]
 markers = [
     "components: component-level reward computations",
+    "transforms: mathematical transform functions",
     "robustness: stress and edge-case behavior",
     "api: public API surface and helpers",
     "cli: command-line interface behaviors",
