chore: consistent naming for python packages in docker image
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/quickadapter/docker-compose.yml
+++ b/quickadapter/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       args:
         optuna_version: 4.5.0
         scikit_learn_extra_version: 0.3.0
-        skimage_version: 0.25.2
+        scikit_image_version: 0.25.2
     restart: unless-stopped
     container_name: freqtrade-quickadapter
     environment:
