--- a/renovate.json
+++ b/renovate.json
@@ -15,40 +15,12 @@
         "**/docker-compose*.yml"
       ],
       "matchStrings": [
-        "ARG\\s+scikit_learn_extra_version=(?<currentValue>[^\\s]+)",
-        "\\s+scikit_learn_extra_version:\\s*(?<currentValue>[^\\s]+)"
-      ],
-      "datasourceTemplate": "pypi",
-      "depNameTemplate": "scikit_learn_extra",
-      "packageNameTemplate": "scikit-learn-extra"
-    },
-    {
-      "customType": "regex",
-      "managerFilePatterns": [
-        "**/Dockerfile*",
-        "**/docker-compose*.yml"
-      ],
-      "matchStrings": [
-        "ARG\\s+skimage_version=(?<currentValue>[^\\s]+)",
-        "\\s+skimage_version:\\s*(?<currentValue>[^\\s]+)"
-      ],
-      "datasourceTemplate": "pypi",
-      "depNameTemplate": "skimage",
-      "packageNameTemplate": "scikit-image"
-    },
-    {
-      "customType": "regex",
-      "managerFilePatterns": [
-        "**/Dockerfile*",
-        "**/docker-compose*.yml"
-      ],
-      "matchStrings": [
         "ARG\\s+(?<depName>\\w+)_version=(?<currentValue>[^\\s]+)",
         "\\s+(?<depName>\\w+)_version:\\s*(?<currentValue>[^\\s]+)"
       ],
       "datasourceTemplate": "pypi",
       "depNameTemplate": "{{depName}}",
-      "packageNameTemplate": "{{depName}}"
+      "packageNameTemplate": "{{{replace '_' '-' depName}}}"
     }
   ]
 }
