--- a/quickadapter/user_data/config-template.json
+++ b/quickadapter/user_data/config-template.json
@@ -144,7 +144,7 @@
       "include_timeframes": ["5m", "15m", "1h", "4h"],
       "label_period_candles": 18,
       "label_metric": "euclidean",
-      "label_weights": [0.5, 0.5],
+      "label_weights": [0.5, 0.5, 0.5],
       "include_shifted_candles": 6,
       "DI_threshold": 10,
       "weight_factor": 0.9,
