chore: add devcontainers configuration
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
     "EditorConfig.EditorConfig",
     "streetsidesoftware.code-spell-checker",
     "ms-python.python",
-    "charliermarsh.ruff"
+    "charliermarsh.ruff",
+    "ms-vscode-remote.remote-containers"
   ]
 }
