--- a/ReforceXY/docker-compose.yml
+++ b/ReforceXY/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     # Build step - only needed when additional dependencies are needed
     build:
       context: .
-      dockerfile: Dockerfile.reforcexy
+      dockerfile: Dockerfile
       args:
         optuna_version: 4.6.0
     restart: unless-stopped
