--- a/quickadapter/docker-compose.yml
+++ b/quickadapter/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     # Build step - only needed when additional dependencies are needed
     build:
       context: .
-      dockerfile: Dockerfile.quickadapter
+      dockerfile: Dockerfile
       args:
         optuna_version: 4.6.0
         scikit_learn_extra_version: 0.3.0
