--- a/ReforceXY/.devcontainer/devcontainer.json
+++ b/ReforceXY/.devcontainer/devcontainer.json
@@ -29,6 +29,7 @@
         "streetsidesoftware.code-spell-checker",
         "ms-python.python",
         "charliermarsh.ruff",
+        "sst-dev.opencode",
         "saoudrizwan.claude-dev"
       ],
       "settings": {
