chore(devcontainer): handle properly symlinks in workspace
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/.gitignore
+++ b/.gitignore
@@ -378,3 +378,10 @@ config.json
 **/user_data/models/**
 **/user_data/data/**
 !.gitkeep
+
+*/.serena
+*/.serena/**
+*/.clinerules
+*/.clinerules/**
+*/openspec
+*/openspec/**
