chore(devcontainers): enable attribute path is nix feature
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/ReforceXY/.devcontainer/devcontainer.json
+++ b/ReforceXY/.devcontainer/devcontainer.json
@@ -20,7 +20,8 @@
         "ripgrep",
         "delta",
         "btop"
-      ]
+      ],
+      "useAttributePath": true
     },
     "ghcr.io/devcontainers/features/common-utils:2": {
       "installZsh": true,
