perf(qav3): refine default config
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/ReforceXY/user_data/config-template.json
+++ b/ReforceXY/user_data/config-template.json
@@ -54,7 +54,13 @@
       // "rateLimit": 60
     },
     // Spot top 5
-    "pair_whitelist": ["BTC/USDT", "ETH/USDT", "SOL/USDT", "BNB/USDT", "XRP/USDT"],
+    "pair_whitelist": [
+      "BTC/USDT",
+      "ETH/USDT",
+      "SOL/USDT",
+      "BNB/USDT",
+      "XRP/USDT"
+    ],
     // // Spot IA
     // "pair_whitelist": [
     //     "NEAR/USDT",
@@ -114,14 +120,26 @@
     "data_kitchen_thread_count": 4, // set to number of CPU threads / 4
     "track_performance": false,
     "feature_parameters": {
-      "include_corr_pairlist": ["BTC/USDT", "ETH/USDT"],
-      "include_timeframes": ["5m", "15m", "1h", "4h"],
+      "include_corr_pairlist": [
+        "BTC/USDT",
+        "ETH/USDT"
+      ],
+      "include_timeframes": [
+        "5m",
+        "15m",
+        "1h",
+        "4h"
+      ],
       "include_shifted_candles": 6,
       "weight_factor": 0.9,
       "principal_component_analysis": false,
       "use_SVM_to_remove_outliers": false,
       "use_DBSCAN_to_remove_outliers": false,
-      "indicator_periods_candles": [8, 16, 32],
+      "indicator_periods_candles": [
+        8,
+        16,
+        32
+      ],
       "inlier_metric_window": 0,
       "noise_standard_deviation": 0.02,
       "reverse_test_train_order": false,
