chore: add gh cli feature to devcontainers
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/ReforceXY/.devcontainer/devcontainer.json
+++ b/ReforceXY/.devcontainer/devcontainer.json
@@ -10,6 +10,7 @@
   "mounts": [
     "source=${localWorkspaceFolder}/..,target=${localWorkspaceFolder}/..,type=bind,consistency=cached",
     "source=${localEnv:HOME}/.config/opencode,target=/home/ftuser/.config/opencode,type=bind,consistency=cached",
+    "source=${localEnv:HOME}/.config/gh,target=/home/ftuser/.config/gh,type=bind,consistency=cached",
     "source=${localEnv:HOME}/.local/share/opencode,target=/home/ftuser/.local/share/opencode,type=bind,consistency=cached",
     "source=${localEnv:HOME}/.local/state/opencode,target=/home/ftuser/.local/state/opencode,type=bind,consistency=cached"
   ],
@@ -19,6 +20,7 @@
       "packages": "ripgrep,delta,btop",
       "useAttributePath": true
     },
+    "ghcr.io/devcontainers/features/github-cli:1": {},
     "ghcr.io/devcontainers/features/common-utils:2": {
       "installZsh": true,
       "configureZshAsDefaultShell": true,
