--- a/quickadapter/.devcontainer/devcontainer.json
+++ b/quickadapter/.devcontainer/devcontainer.json
@@ -54,5 +54,9 @@
       }
     }
   },
+  "remoteEnv": {
+    "GH_TOKEN": "${localEnv:GH_TOKEN}",
+    "GITHUB_TOKEN": "${localEnv:GITHUB_TOKEN}"
+  },
   "remoteUser": "ftuser"
 }
