--- a/ReforceXY/reward_space_analysis/pyproject.toml
+++ b/ReforceXY/reward_space_analysis/pyproject.toml
@@ -8,10 +8,10 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "numpy",
+    "numpy>=1.26",
     "pandas",
     "scikit-learn",
-    "scipy",
+    "scipy>=1.11",
     "pytest",
 ]
 
@@ -66,7 +66,15 @@ addopts = [
     "--strict-markers",
     "--color=yes",
     "--cov=reward_space_analysis",
+    "--cov-config=pyproject.toml",
     "--cov-fail-under=85"
+]
+
+[tool.coverage.run]
+source = ["reward_space_analysis"]
+omit = [
+    "tests/*",
+    "test_*.py",
 ]
 
 [tool.ruff]
