--- a/quickadapter/user_data/config-template.json
+++ b/quickadapter/user_data/config-template.json
@@ -39,7 +39,7 @@
     "price_last_balance": 0.0
   },
   "reversal_confirmation": {
-    "max_natr_ratio_percent": 0.05
+    "max_natr_multiplier_fraction": 0.05
   },
   "exchange": {
     "name": "binance",
@@ -135,11 +135,11 @@
     },
     "extrema_smoothing": {
       "method": "kaiser",
-      "window": 5,
+      "window_candles": 5,
       "beta": 12.0
     },
     "predictions_extrema": {
-      "thresholds_smoothing": "isodata"
+      "threshold_smoothing_method": "isodata"
     },
     "optuna_hyperopt": {
       "enabled": true,
@@ -158,7 +158,7 @@
       "&s-minima_threshold": -2,
       "&s-maxima_threshold": 2,
       "label_period_candles": 18,
-      "label_natr_ratio": 10.5,
+      "label_natr_multiplier": 10.5,
       "hp_rmse": -1,
       "train_rmse": -1
     },
@@ -174,6 +174,7 @@
         "4h"
       ],
       "label_period_candles": 18,
+      "label_natr_multiplier": 10.5,
       "label_metric": "kmedoids",
       "include_shifted_candles": 6,
       "DI_threshold": 10,
