docs: fix config parameter and bump to v3.9.0
- Fix config-template.json: label_metric -> label_method
- Bump version from 3.8.5 to 3.9.0 in model and strategy

Parameter names now match QuickAdapterRegressorV3.py implementation.

--- a/quickadapter/user_data/config-template.json
+++ b/quickadapter/user_data/config-template.json
@@ -175,7 +175,7 @@
       ],
       "label_period_candles": 18,
       "label_natr_multiplier": 10.5,
-      "label_metric": "kmedoids",
+      "label_method": "kmedoids",
       "include_shifted_candles": 6,
       "DI_threshold": 10,
       "weight_factor": 0.9,
