chore: refine config-template.json for extrema weighting options
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/quickadapter/user_data/config-template.json
+++ b/quickadapter/user_data/config-template.json
@@ -126,6 +126,8 @@
     "track_performance": false,
     "extrema_weighting": {
       "strategy": "none"
+      // "strategy": "amplitude",
+      // "gamma": 1.5
     },
     "extrema_smoothing": {
       "method": "kaiser",
