chore: refine extrema weighting configuration in config-template.json
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/quickadapter/user_data/config-template.json
+++ b/quickadapter/user_data/config-template.json
@@ -126,9 +126,11 @@
     "track_performance": false,
     "extrema_weighting": {
       "strategy": "none"
-      // "strategy": "amplitude",
-      // "gamma": 1.5
     },
+    // "extrema_weighting": {
+    //   "strategy": "amplitude",
+    //   "gamma": 1.5
+    // },
     "extrema_smoothing": {
       "method": "kaiser",
       "window_candles": 5,
