fix: eliminate data leakage in extrema weighting normalization (#30)
* fix: eliminate data leakage in extrema weighting normalization

Move dataset-dependent scaling from strategy (pre-split) to model label
pipeline (post-split) to prevent train/test data leakage.

Changes:
- Add ExtremaWeightingTransformer (datasieve BaseTransform) in Utils.py
  that fits standardization/normalization stats on training data only
- Add define_label_pipeline() in QuickAdapterRegressorV3 that replaces
  FreqAI's default MinMaxScaler with our configurable transformer
- Simplify strategy's set_freqai_targets() to pass raw weighted extrema
  without any normalization (normalization now happens post-split)
- Remove pre-split normalization functions from Utils.py (~107 lines)

The transformer supports:
- Standardization: zscore, robust, mmad, none
- Normalization: minmax, sigmoid, none (all mathematically invertible)
- Configurable minmax_range (default [-1, 1] per FreqAI convention)
- Correct inverse_transform for prediction recovery

BREAKING CHANGES:
- softmax normalization removed
- l1, l2, rank normalization removed (not mathematically invertible)
- rank_method config option removed
- extrema_weighting config now processed in model pipeline instead of strategy

* chore: remove dead rank_method log line

* chore: cleanup unused imports and comments

* refactor(quickadapter): cleanup extrema weighting implementation

Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

* fix: use robust_quantiles config in transformer fit()

* style: align with codebase conventions (error messages, near-zero detection)

* refactor: remove redundant checks

Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

* fix: update config validation for transformer pipeline

- Remove obsolete aggregation+normalization warning (no longer applies post-refactor)
- Change standardization+normalization=none from error to warning

* refactor: cleanup ExtremaWeightingTransformer implementation

Signed-

--- a/quickadapter/user_data/config-template.json
+++ b/quickadapter/user_data/config-template.json
@@ -127,6 +127,10 @@
     "extrema_weighting": {
       "strategy": "none"
     },
+    // "extrema_weighting": {
+    //   "strategy": "amplitude",
+    //   "gamma": 1.5
+    // },
     "extrema_smoothing": {
       "method": "kaiser",
       "window_candles": 5,
